k8s-cluster-configuration/applications/penpot/base/gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: penpot-gateway
  namespace: penpot
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "penpot.k6nis.dev"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  gatewayClassName: traefik
  listeners:
    - name: https
      protocol: HTTPS
      port: 8443
      hostname: penpot.k6nis.dev
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: penpot-tls
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: penpot
  namespace: penpot
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: penpot-gateway
      namespace: penpot
  hostnames:
    - penpot.k6nis.dev
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: penpot
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
